syntax = "proto3";
option go_package = "protobufMessages/";

package millionaires.Run;

import "Questions.proto";

message Run {
    string id = 1;
    string name = 2; 
    int32 usedLifelines = 3;
    bool ended = 4;
}



message StartRunRequest{
    string name = 1;
}

message StartRunResponse{
    string runId = 1;
    Questions.GetQuestionResponse question = 2;
}



message EndRunRequest {
    string runId = 1;
}

message EndRunResponse {
    bool runAffected = 1; 
}



message GetRunsResponse {
    repeated Run runs = 1;
}
