syntax = "proto3";

package websocket;
option go_package = "protobufMessages/";


enum MessageType{
    StartCall = 0;
    EndCall = 1;
    Message = 2;
    
    CallServerResponse = 3;
    IncomingCall = 4;
    CallResponse = 5;

    Heartbeat = 6;
    HeartbeatResponse = 7;

    Identify = 8;

    Error = 9;

    Connected = 10;

    LeaderboardUpdate = 11;
}

message WebsocketMessage{
    MessageType type = 1;
    oneof payload{
        EmptyPayload empty = 2;
        IdentifyPayload identify = 3;
        MessagePayload message = 4;
        CallServerResponsePayload callServerResponse = 5;
        IncomingCallPayload incomingCall = 6;
        CallResponsePayload callResponse = 7;
       
        ConnectedResponsePayload connectedResponse = 8;

        ErrorPayload error = 9;
    }
}
message LeaderBoardUpdatePayload{
    repeated string names = 1;
    repeated int32 scores = 2;
}
message EmptyPayload{
    // Empty
}

message ErrorPayload{
    string message = 1;
}

message IdentifyPayload{
    string runSnowflakeId = 1;
}
message ConnectedResponsePayload{
    int32 heartbeatInterval = 1;
}
message MessagePayload{
    string authorName = 1;
    string message = 2 ;
}
message CallServerResponsePayload{
    string calleeName = 1;
}
message IncomingCallPayload{
    string callerName = 1;
}
message CallResponsePayload{
    bool accepted = 1;
}
